[package]
name = "spam-bot-mvp"
version = "0.1.0"
edition = "2021"
authors = ["Shivam vatshivam4988@gmail.com"]
description = "A telegram bot built entirely in rust to identify and notify the messages classified as spam in a group or a DM."
repository = "https://github.com/shivam37483/Spam-Filtering-Bot"
keywords = ["telegram", "spam", "sqlite", "rust"]

[dependencies]
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
rlua = "0.19"

[build-dependencies]